manifests/applications/homepage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: homepage.TEMPLATE_DOMAIN
    nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy.oauth2-proxy.svc.cluster.local:4180/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: https://oauth2.TEMPLATE_DOMAIN/oauth2/start?rd=https%3A%2F%2Fhomepage.TEMPLATE_DOMAIN%2F
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - homepage.TEMPLATE_DOMAIN
      secretName: homepage-tls
  rules:
    - host: homepage.TEMPLATE_DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 3000
